--- a/sources/css/import/_colors.styl
+++ b/sources/css/import/_colors.styl
@@ -2,4 +2,5 @@ blue           = #0049d3
 blue2          = #00aafa
 white          = #f4f4f4
 toolbar_top    = #1f2130
+toolbar_mobile = rgba(28,28,28, 1)
 toolbar_bottom = rgba(28,28,28,.8)
