--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -2,6 +2,7 @@ blue           = #0049d3
 blue2          = #00aafa
 white          = #f4f4f4
 toolbar_top    = #1f2130
+toolbar_mobile = rgba(28,28,28, 1)
 toolbar_bottom = rgba(28,28,28,.8)
 /*!
  * Примеси
@@ -255,11 +256,13 @@ div.pp_default .pp_loaderIcon
 	height        61px
 	z-index       20
 	position      fixed
-	background    toolbar_bottom
+	background    toolbar_top
 	line-height   62px
 	z-index 300
 	white-space   nowrap
 	margin-bottom 20px
+	@media (min-width: scr_md)
+		background    toolbar_bottom
 	.container
 		position relative
 		z-index 2
@@ -275,7 +278,13 @@ div.pp_default .pp_loaderIcon
 					left -55px
 		&__right
 			svg
-				right -14px
+				right 6px
+				max-height 29px
+				@media (max-width: scr_md)
+					top 29px !important
+				@media (min-width: scr_md)
+					right -14px
+					max-height none
 				@media (min-width: scr_lg)
 					right 0
 		svg
@@ -285,11 +294,13 @@ div.pp_default .pp_loaderIcon
 				fill toolbar_top
 		&:after
 			position    absolute
-			height      68px
+			height      58px
 			background  toolbar_top
 			content     ""
 			width       155px
 			left        30px
+			@media (min-width: scr_md)
+				height 68px
 			@media (min-width: scr_lg)
 				width  201px
 				left   15px
@@ -306,9 +317,11 @@ div.pp_default .pp_loaderIcon
 		full-width()
 		position     relative
 		z-index      30
-		line-height  104px
-		&__frame
-			max-width 240px
+		line-height  91px
+		@media (min-width: scr_md)
+			line-height  104px
+		/*&__frame
+			max-width 160px
 			position absolute
 			top 61px
 			t all
@@ -332,14 +345,17 @@ div.pp_default .pp_loaderIcon
 					right -35px
 				&, &:after, & svg
 					height 82px
+		*/
 		svg
 			middle()
-			max-width 43%
-			@media (min-width: scr_sm)
+			max-width 77%
+			max-height 60px
+			@media (min-width: scr_md)
 				max-width 70%
+				max-height none
 			@media (min-width: scr_lg)
 				max-width 188px
-		@media (min-width: scr_sm)
+		@media (min-width: scr_md)
 			margin-left 20px
 	.nav
 		full-width()
@@ -541,7 +557,9 @@ div.pp_default .pp_loaderIcon
 		@media (min-width: scr_md)
 			display block
 	&:before
-		background toolbar_bottom
+		background  toolbar_top
+		@media (min-width: scr_md)
+			background toolbar_bottom
 		height 91px
 	@media (min-width: scr_sm)
 		margin-bottom  15px
@@ -1188,9 +1206,10 @@ article
 			padding 13px 13px 6px
 			t(background)
 			&:hover
-				background #0082dc !important
-				.tech__link
-					opacity 1
+				@media (min-width: scr_md)
+					background #0082dc !important
+					.tech__link
+						opacity 1
 			@media (min-width: scr_sm)
 				margin-top 30px
 				padding 13px 13px 10px
@@ -1290,13 +1309,14 @@ article
 				line-height 105px
 			margin-left -13px
 			&:hover
-				padding 13px 13px 8px
-				margin-top -6px
-				margin-bottom -8px
-				t(background)
-				background black
-				.services__title
-					color white
+				@media (min-width: scr_md)
+					padding 13px 13px 8px
+					margin-top -6px
+					margin-bottom -8px
+					t(background)
+					background black
+					.services__title
+						color white
 	.years, .pages
 		display none
 		@media (min-width: scr_sm)
@@ -1370,10 +1390,11 @@ article
 				background rgba(0,0,0,.45)
 				overflow hidden
 				&:hover
-					background #0082dc !important
-					color white
-					.news__date
+					@media (min-width: scr_md)
+						background #0082dc !important
 						color white
+						.news__date
+							color white
 	.filter, .select
 		full-width()
 		position relative
