--- a/sources/css/import/mobile.styl
+++ b/sources/css/import/mobile.styl
@@ -62,8 +62,11 @@
 			text-align left
 		.captcha
 			full-width()
-			background-color #737a82
+			background-color #ffffff
 			height 30px
+			background-size contain
+			background-repeat no-repeat
+			background-position center center
 		input[type="submit"]
 			appearance none
 			middle()
