--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -3903,6 +3903,22 @@ article {
   position: relative;
   z-index: 10;
 }
+@media (min-width: 992px) {
+  body:not(.eng) .toolbar .logo {
+    margin-left: 0px;
+  }
+}
+@media (min-width: 768px) {
+  body:not(.eng) .toolbar .logo svg {
+    max-width: 70%;
+  }
+}
+@media (min-width: 1200px) {
+  body:not(.eng) .toolbar .logo svg {
+    max-width: 223px;
+    max-height: 80px;
+  }
+}
 .index-page {
   float: left;
   width: 100%;
